--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <main class="wrapper">
     <div class="main__info container">
       <div class="main__info-title">
-        <div>
+        <div class="hero__info">
           <h2>WEB-DEVELOPER</h2>
           <h3>ERKINBEK BAKAY UULU</h3>
           <h4>28 y.o</h4>
@@ -101,6 +101,27 @@
       </div>
     </ul>
   </article>
+
+  <section class="container">
+    <div class="slider">
+      <div class="slider-line">
+        <img src="/assets/nature1.jpg" alt="nature1" />
+        <img src="/assets/nature2.jpg" alt="nature2" />
+        <img src="/assets/nature3.jpg" alt="nature3" />
+        <img src="/assets/nature4.png" alt="nature4" />
+      </div>
+    </div>
+    <div class="control__btns">
+      <button class="button slider-prev">Prev</button>
+      <button class="button slider-next">Next</button>
+    </div>
+  </section>
+
+  <footer class="footer">
+    <div class="container">
+      <h2 class="footer__text">THANKS FOR YOUR ATANTION</h2>
+    </div>
+  </footer>
   <body>
     <script src="./main.js"></script>
   </body>
