--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
   <section class="container">
     <div class="slider">
       <div class="slider-line">
-        <img src="/assets/nature1.jpg" alt="nature1" />
-        <img src="/assets/nature2.jpg" alt="nature2" />
-        <img src="/assets/nature3.jpg" alt="nature3" />
-        <img src="/assets/nature4.png" alt="nature4" />
+        <img src="./assets/img1.jpg" alt="img1" />
+        <img src="./assets/img2.jpg" alt="img2" />
+        <img src="./assets/img3.jpg" alt="img3" />
+        <img src="./assets/img4.jpg" alt="img4" />
       </div>
     </div>
     <div class="control__btns">
